[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/godot-openxr/scenes/first_person_controller_vr.gd" type="Script" id=1]
[ext_resource path="res://addons/godot-openxr/config/OpenXRConfig.gdns" type="Script" id=2]
[ext_resource path="res://player/HandController.tscn" type="PackedScene" id=3]
[ext_resource path="res://player/MovementControl.gd" type="Script" id=4]
[ext_resource path="res://player/HandMesh.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.2
mid_height = 0.05
radial_segments = 16
rings = 4

[node name="Player" type="ARVROrigin"]
script = ExtResource( 1 )

[node name="Configuration" type="Node" parent="."]
script = ExtResource( 2 )
color_space = 0
refresh_rate = 0.0

[node name="ARVRCamera" type="ARVRCamera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0 )
cull_mask = 1048063
far = 2048.0

[node name="ShadowHead" type="MeshInstance" parent="ARVRCamera"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
layers = 512
mesh = SubResource( 1 )
material/0 = null

[node name="LeftHandController" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1, -0.5 )

[node name="HandMesh" parent="LeftHandController/HandAnchor" index="0" instance=ExtResource( 5 )]

[node name="RightHandController" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1, -0.5 )
controller_id = 2

[node name="HandAnchor" parent="RightHandController" index="0"]
transform = Transform( -4.37114e-08, -1, 0, 0.707107, -3.09086e-08, 0.707107, -0.707107, 3.09086e-08, 0.707107, 0, -0.1, 0.1 )

[node name="HandMesh" parent="RightHandController/HandAnchor" index="0" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, -1, 0, 0, 0, 1, 0, 0, 0 )

[node name="MovementControl" type="Spatial" parent="."]
script = ExtResource( 4 )
left_hand = NodePath("../LeftHandController")
right_hand = NodePath("../RightHandController")
origin = NodePath("..")

[node name="RecenterTimer" type="Timer" parent="MovementControl"]
one_shot = true

[connection signal="button_pressed" from="RightHandController" to="MovementControl" method="_on_RightHandController_button_pressed"]
[connection signal="button_release" from="RightHandController" to="MovementControl" method="_on_RightHandController_button_release"]
[connection signal="timeout" from="MovementControl/RecenterTimer" to="MovementControl" method="_on_RecenterTimer_timeout"]

[editable path="LeftHandController"]
[editable path="RightHandController"]
